--- a/todo-input/package.json
+++ b/todo-input/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
